# oipExpress

./: .clang-format  CMakeLists.txt  README.md  iso-10303-11--2004.bnf
CMake/: FindBoost.cmake
ExpressBinding/src/OpenInfraPlatform/ExpressBinding/: main.cpp  memory.h  namespace.h  stack.h
ExpressBinding/src/OpenInfraPlatform/ExpressBinding/Generator/: Generator.h  GeneratorCSharp.Net.h  GeneratorEcho.cpp  GeneratorEcho.h  GeneratorOIP.cpp  GeneratorOIP.h  GeneratorVB.Net.h
ExpressBinding/src/OpenInfraPlatform/ExpressBinding/Meta/: Entity.cpp  Entity.h  EntityAttribute.cpp  EntityAttribute.h  Schema.cpp  Schema.h  Type.cpp  Type.h  eExpressTokenType.h
ExpressBinding/src/OpenInfraPlatform/ExpressBinding/Parser/: node.cpp  node.h  parser.y  tokens.l
Template/: Ifc2x3Entities.h  Ifc2x3EntitiesMap.h  Ifc2x3EntityBroker.cpp  Ifc2x3EntityEnums.h  Ifc2x3Types.h
Template/guid/: CreateGuid_64.cpp  CreateGuid_64.h
Template/model/: Exception.cpp  Exception.h  Model.cpp  Model.h  Object.cpp  Object.h  StatusObservable.cpp  StatusObservable.h  UnitConverter.cpp  UnitConverter.h  UnknownEntityException.h  Util.h  shared_ptr.h
Template/reader/: IfcStepReader.cpp  IfcStepReader.h  IfcXmlReader.cpp  IfcXmlReader.h  Reader.cpp  Reader.h  ReaderUtil.cpp  ReaderUtil.h
Template/writer/: IfcStepWriter.cpp  IfcStepWriter.h  IfcWriter.h  IfcXmlWriter.cpp  IfcXmlWriter.h  WriterUtil.cpp  WriterUtil.h
Template/xml/: XmlTools.cpp  XmlTools.h
Tools/: fileHeaderGenerator.py
schema/: Family.exp  IFC4_ADD1.exp  IFC4_edit.exp
